fixing z-index

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -102,6 +102,33 @@
     }
   }
 
+  &__goods-list-item-link {
+    text-decoration: none;
+  }
+
+  &__goods-list-item-info-header {
+    font-size: 20px;
+    font-weight: 500;
+
+    text-align: center;
+    color: $black-800;
+  }
+
+  &-list-item-info__price {
+    margin-top: 8px;
+    font-size: 18px;
+
+    &--current {
+      color: $black-800;
+    }
+
+    &--old {
+      text-decoration: line-through;
+      opacity: 0.4;
+      color: $black-800;
+    }
+  }
+
   &__card-info-header,
   &__card-info-price {
     display: block;
